<resources>
    <string name="app_name">SmartAlbum</string>
    <string name="setting">Setting</string>
    <string name="no_login_remind">Login To Google Drive</string>
    <string name="setting_slide_show">SLIDE SHOW</string>
    <string name="setting_display_time">Display Time</string>
    <string name="setting_display_effect">Display Effect</string>
    <string name="setting_transition_effect">Transition Effect</string>
    <string name="setting_photo_order">Photo Order</string>
    <string name="setting_music">Background Music</string>
    <string name="setting_auto">AUTO-START</string>
    <string name="setting_auto_schedules">Schedules</string>
    <string name="setting_auto_timer">Timer</string>
    <string name="setting_others">ORIENTATION</string>
    <string name="setting_syn">Sync Interval</string>
    <string name="setting_syn_remind">To scan your photo library for update</string>
    <string name="setting_screen_sys">With system</string>
    <string name="setting_screen_h">Horizontal screen</string>
    <string name="setting_screen_v">Vertical screen</string>
    <string name="setting_done">Done</string>
    <string name="schedule_setting">Schedule Setting</string>
    <string name="folder_title">Folders on your google drive</string>
    <string name="timer_tips">Shutdown in</string>
    <string name="permission_tips">Please grant the necessary permissions</string>
    <string name="setting_schedule_start_time">Start At:</string>
    <string name="setting_schedule_stop_time">Stop At:</string>

    <string-array name="custom_unit">
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
    </string-array>

    <string-array name="timer_unit">
        <item>Minutes</item>
        <item>Hours</item>
    </string-array>

    <string name="time_s_5">5 Seconds</string>
    <string name="time_s_10">10 Seconds</string>
    <string name="time_s_15">15 Seconds</string>
    <string name="time_s_30">30 Seconds</string>
    <string name="time_m_1">1 Minutes</string>
    <string name="time_m_5">5 Minutes</string>
    <string name="time_m_10">10 Minutes</string>
    <string name="time_custom">Minutes</string>
    <string name="time_toast">Please enter an integer greater than 1</string>


    <string name="dis_effect_pan">Pan</string>
    <string name="dis_effect_scale">Scale to Fit Center</string>
    <string name="dis_effect_crop">Crop to Fit Center</string>
    <string name="dis_effect_zoom">Zoom</string>
    <string name="dis_effect_focus">Focus</string>

    <string name="trans_effect_fade">Fade</string>
    <string name="trans_effect_cross">Cross Fade</string>
    <string name="trans_effect_memory">Memory</string>

    <string name="file_shuffle">Shuffle</string>
    <string name="file_random">Random</string>
    <string name="file_az">Flle Name (A to Z)</string>
    <string name="file_za">File Name (Z to A)</string>
    <string name="file_earliest">Modified Date (Earliest first)</string>
    <string name="file_latest">Modified Date (Latest first)</string>

    <string name="close_m_0">Off</string>
    <string name="close_m_5">5 Minutes</string>
    <string name="close_m_15">15 Minutes</string>
    <string name="close_m_30">30 Minutes</string>
    <string name="close_m_60">1 hour</string>
    <string name="close_m_120">2 hour</string>
    <string name="close_custom">Minutes</string>
    <string name="close_toast">Please enter an integer greater than 10</string>

</resources>