<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <include layout="@layout/layout_top_bar"/>

    <LinearLayout
        android:id="@+id/lv_pan"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/dis_effect_pan"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>

    <LinearLayout
        android:id="@+id/lv_scale"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/dis_effect_scale"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>
    <LinearLayout
        android:id="@+id/lv_crop"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/dis_effect_crop"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>
    <LinearLayout
        android:id="@+id/lv_zoom"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/dis_effect_zoom"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>

    <LinearLayout
        android:id="@+id/lv_focus"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/dis_effect_focus"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>


</LinearLayout>
