<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <include layout="@layout/layout_top_bar"/>

    <LinearLayout
        android:id="@+id/lv_fade"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/trans_effect_fade"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>

    <LinearLayout
        android:id="@+id/lv_cross"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/trans_effect_cross"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>
    <LinearLayout
        android:id="@+id/lv_memory"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/trans_effect_memory"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>

</LinearLayout>
