<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <include layout="@layout/layout_top_bar"/>

    <LinearLayout
        android:id="@+id/lv_0"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/close_m_0"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/ic_right"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>

    <LinearLayout
        android:id="@+id/lv_5"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/close_m_5"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/ic_right"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>
    <LinearLayout
        android:id="@+id/lv_15"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/close_m_15"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/ic_right"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>
    <LinearLayout
        android:id="@+id/lv_30"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/close_m_30"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/ic_right"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>
    <LinearLayout
        android:id="@+id/lv_60"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/close_m_60"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/ic_right"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>
    <LinearLayout
        android:id="@+id/lv_120"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_white_selecor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:nextFocusDown="@+id/ed_time">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/black_66"
            android:text="@string/close_m_120"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/ic_right"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ed_time"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:gravity="center_vertical"
            android:nextFocusUp="@+id/lv_10m"
            android:nextFocusDown="@+id/lv_custom"/>
        <LinearLayout
            android:id="@+id/lv_custom"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/btn_white_selecor"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:nextFocusUp="@+id/ed_time">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:textColor="@color/black_66"
                android:text="@string/time_custom"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/ic_right"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_ee"/>



</LinearLayout>
